gcc/testsuite/g++.dg/modules/main-1.C
// { dg-additional-options "-fmodules-ts" }
// { dg-prune-output "not writing module" }

export module M;
int main() {}  // { dg-error "attach" }
